# OOKFormatCalculate

./: .gitignore  CMakeLists.txt  Chinese.md  OOKFormatCalculate.kdev4  README.md  main  rewrite.py
OOKFormatCalculate/: .main.cpp.kate-swp  main.cpp
OOKFormatCalculate.xcodeproj/: project.pbxproj
OOKFormatCalculate.xcodeproj/project.xcworkspace/xcuserdata/zxkmm.xcuserdatad/: UserInterfaceState.xcuserstate
OOKFormatCalculate.xcodeproj/xcshareddata/xcschemes/: OOKFormatCalculate.xcscheme
OOKFormatCalculate.xcodeproj/xcuserdata/zxkmm.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OOKFormatCalculate.xcodeproj/xcuserdata/zxkmm.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: .Interface.cpp.kate-swp  .algoAuto.h.kate-swp  Algo1527_2242.cpp  Algo1527_2242.h  Algo226x.cpp  Algo226x.h  AlgoGeneral.cpp  AlgoGeneral.h  Interface.cpp  Interface.h  algoAuto.cpp  main.cpp  main.h  processUnit.cpp  processUnit.h
tools/: webVersionSingleFile.cpp
